@@ -13,7 +13,7 @@ import net.minecraft.world.level.Level;
 import net.minecraft.world.level.LevelAccessor;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.material.Material;
-import rbasamoyai.createbigcannons.block_hardness.TerminalBallisticsBlockPropertiesHandler;
+import rbasamoyai.createbigcannons.block_terminal_properties.TerminalBallisticsBlockPropertiesHandler;
 
 public class PartialBlockDamageManager {
 
