@@ -1,0 +1,4 @@
+{
+  "default_block_hardness": 1,
+  "material_hardness_multiplier": 1
+}
