@@ -1,0 +1,10 @@
+{
+  "default_block_hardness": 0.5,
+  "material_hardness_multiplier": 0.5,
+  "variants": {
+    "bottom_northeast=true,bottom_northwest=true,bottom_southeast=true,bottom_southwest=true,top_northeast=true,top_northwest=true,top_southeast=true,top_southwest=true": {
+      "default_block_hardness": 1,
+      "material_hardness_multiplier": 1
+    }
+  }
+}
