@@ -1,0 +1,36 @@
+{
+  "variants": {
+    "layers=1": {
+      "default_block_hardness": 0.25,
+      "material_hardness_multiplier": 0.25
+    },
+    "layers=2": {
+      "default_block_hardness": 0.25,
+      "material_hardness_multiplier": 0.25
+    },
+    "layers=3": {
+      "default_block_hardness": 0.5,
+      "material_hardness_multiplier": 0.5
+    },
+    "layers=4": {
+      "default_block_hardness": 0.5,
+      "material_hardness_multiplier": 0.5
+    },
+    "layers=5": {
+      "default_block_hardness": 0.75,
+      "material_hardness_multiplier": 0.75
+    },
+    "layers=6": {
+      "default_block_hardness": 0.75,
+      "material_hardness_multiplier": 0.75
+    },
+    "layers=7": {
+      "default_block_hardness": 1,
+      "material_hardness_multiplier": 1
+    },
+    "layers=8": {
+      "default_block_hardness": 1,
+      "material_hardness_multiplier": 1
+    }
+  }
+}
