@@ -1,0 +1,4 @@
+{
+  "default_block_hardness": 0,
+  "material_hardness_multiplier": 0
+}
