@@ -37,6 +37,8 @@ modmenu_version=3.2.5
 lazydfu_version=0.1.2
 freecam_forge_file=4643126
 freecam_fabric_file=4643132
+copycats_forge_file=5187793
+copycats_fabric_file=5183573
 
 rpl_version=1.0.0-3a68f88
 
