@@ -31,7 +31,8 @@ Added:
 - Added ability to place Autocannon Ammo Containers as blocks
 - Added tooltip to Autocannon Ammo Container showing contained items and spacing
 - Added Creative Autocannon Ammo Container, an endless source of autocannon ammo
-- Added block hardness compatibility with Create Copycat blocks
+- Added block properties compatibility with Create Copycat blocks
+- Added block proeprties compatibility with Copycats+
 Changes:
 - Reduced the stress cost of the Cannon Loader to match that of the Mechanical Piston
 - Reduced default blob count of Fluid Shell
